Create Role Entity and Repository